# photobundle

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README
apps/: CMakeLists.txt  run_kitti.cc  test_dmap.cc  test_gradient.cc  test_imgradient.cc  test_imsmooth.cc  test_kitti_stereo.cc  test_zncc.cc
config/: kitti_stereo.cfg
data/kitti_init_poor/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  README
src/: CMakeLists.txt  calibration.h  ceres_cereal.h  dataset.cc  dataset.h  debug.h  descriptor_frame.h  eigen.h  eigen_cereal.h  file_loader.cc  file_loader.h  imgproc.cc  imgproc.h  jet_extras.h  photobundle.cc  photobundle.h  photobundle_pyramid.cc  photobundle_pyramid.h  pose_utils.cc  pose_utils.h  sample_eigen.h  stereo_algorithm.cc  stereo_algorithm.h  timer.cc  timer.h  trajectory.cc  trajectory.h  types.cc  types.h  utils.cc  utils.h  v128.cc  v128.h  zncc_patch.h
